--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -340,9 +340,23 @@ strong {
   margin-top: 4rem;
 }
 @media screen and (max-width: 768px) {
-  .md-flex{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  .prodcut-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 32px;
+    text-align: center;
+  }
+  .sidebar{
+    margin-top: 8rem;
+  }
+  .sidebar ul{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 8px;
+    column-gap: 2px;
+  }
+  .cart-box{
+    width: 100%;
+    height: 100%;
   }
 }
